# pykit

./: README.md  pyproject.toml
.mypy_stubs/arviz/stats/: __init__.pyi  diagnostics.pyi  stats.pyi
kitpy/: __init__.py  miscellaneous.py  mixins.py  typeguards.py  validators.py  xmls.py
pykit/: __init__.py  beast2.py  latex.py  metrics.py  mixins.py  plots.py  type_hints.py  typeguards.py  validators.py
