[tool.poetry]
name = "pykit"
version = "0.1.0"
description = "A lightweight Python utility toolkit with reusable functions and helpers for everyday programming tasks"
authors = ["gabriele-marino <gabmarino.8601@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

pydantic = "^2.7.4"
pyyaml = "^6.0.1"
pandas = "^2.2.3"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-pyyaml = "^6.0.12.20241230"
pandas-stubs = "^2.2.3.250308"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
