[tool.poetry]
name = "pykit"
version = "0.1.0"
description = "A lightweight Python utility toolkit with reusable functions and helpers for everyday programming tasks"
authors = ["gabriele-marino <gabmarino.8601@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

arviz = "^0.21.0"
matplotlib = "^3.10.3"
numpy = "^2.2.3"
pandas = "^2.2.3"
pydantic = "^2.7.4"
pyyaml = "^6.0.1"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pandas-stubs = "^2.2.3.250308"
types-pyyaml = "^6.0.12.20241230"
types-tqdm = "^4.67.0.20250513"

[tool.mypy]
strict = true
mypy_path = ".mypy_stubs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
